--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,11 @@
 button {
   width: 33%;
-  padding: 15px;
+  min-width: 50px;
+  min-height: 50px;
+}
+
+body {
+  width: 70%
 }
 
 .operators button {
